<resources>
    <string name="app_name">Pokedex</string>
    <string name="pokedex_tracker">Pokedex Tracker</string>
    <string name="register_new_catch">Register new catch!</string>
    <string name="nationalNum">National #</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="level">Level</string>
    <string name="base_stats">Base Stats</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unknown">Unknown</string>
    <string name="female2">Female</string>
    <string name="male2">Male</string>
    <string name="unknown2">Unknown</string>
    <string name="unknown3">Unknown</string>
    <string name="male3">Male</string>
    <string name="female3">Female</string>
</resources>