<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pokedex_tracker"
            android:textSize="28sp"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/subheadText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_new_catch"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@id/headerText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nationalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationalNum"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/subheadText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/nationalInput" />

        <EditText
            android:id="@+id/nationalInput"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/subheadText"
            app:layout_constraintStart_toEndOf="@id/nationalText"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/nationalInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/nameInput" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:ems="10"
            android:inputType="textCapWords"
            app:layout_constraintTop_toBottomOf="@id/nationalInput"
            app:layout_constraintStart_toEndOf="@id/nameText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/speciesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/species"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/nameInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/speciesInput" />

        <EditText
            android:id="@+id/speciesInput"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:ems="10"
            android:inputType="textCapWords"
            app:layout_constraintTop_toBottomOf="@id/nameInput"
            app:layout_constraintStart_toEndOf="@id/speciesText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/genderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/speciesInput"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/speciesInput"
            app:layout_constraintStart_toEndOf="@id/genderText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female2"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male2"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/unknownButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/unknown2"
                android:textSize="14sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/heightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/genderText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/heightInput" />

        <EditText
            android:id="@+id/heightInput"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:text="2.2"
            app:layout_constraintTop_toBottomOf="@id/genderText"
            app:layout_constraintStart_toEndOf="@id/heightText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/weightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/heightInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/weightInput" />

        <EditText
            android:id="@+id/weightInput"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/heightInput"
            app:layout_constraintStart_toEndOf="@id/weightText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/levelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/weightInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/spinner" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weightInput"
            app:layout_constraintStart_toEndOf="@id/levelText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/baseStatsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/base_stats"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/hpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hp"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/baseStatsText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/hpInput" />

        <EditText
            android:id="@+id/hpInput"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/baseStatsText"
            app:layout_constraintStart_toEndOf="@id/hpText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/attackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attack"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/hpInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/attackInput" />

        <EditText
            android:id="@+id/attackInput"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/hpInput"
            app:layout_constraintStart_toEndOf="@id/attackText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/defenseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defense"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/attackInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/defenseInput" />

        <EditText
            android:id="@+id/defenseInput"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/attackInput"
            app:layout_constraintStart_toEndOf="@id/defenseText"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle"
            app:layout_constraintTop_toBottomOf="@id/defenseInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:layout_marginEnd="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:layout_marginStart="8dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
